--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2024-11-19T09:39:21.743Z\n"
-"PO-Revision-Date: 2024-11-19T09:39:21.743Z\n"
+"POT-Creation-Date: 2024-11-20T09:43:43.959Z\n"
+"PO-Revision-Date: 2024-11-20T09:43:43.960Z\n"
 
 msgid "Never"
 msgstr "Never"
@@ -366,6 +366,15 @@ msgstr "Personal access tokens"
 
 msgid "About DHIS2"
 msgstr "About DHIS2"
+
+msgid "Email verification link sent successfully!"
+msgstr "Email verification link sent successfully!"
+
+msgid "Failed to send email verification link."
+msgstr "Failed to send email verification link."
+
+msgid "Verify Email"
+msgstr "Verify Email"
 
 msgid "Manage personal access tokens"
 msgstr "Manage personal access tokens"
