--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2024-11-21T08:20:57.566Z\n"
-"PO-Revision-Date: 2024-11-21T08:20:57.566Z\n"
+"POT-Creation-Date: 2024-12-16T05:17:28.155Z\n"
+"PO-Revision-Date: 2024-12-16T05:17:28.155Z\n"
 
 msgid "Never"
 msgstr "Never"
@@ -375,6 +375,9 @@ msgstr "Failed to send email verification link."
 
 msgid "Verify Email"
 msgstr "Verify Email"
+
+msgid "Please verify your email"
+msgstr "Please verify your email"
 
 msgid "Manage personal access tokens"
 msgstr "Manage personal access tokens"
