feat: empty email refinement

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-01-13T13:12:31.582Z\n"
-"PO-Revision-Date: 2025-01-13T13:12:31.583Z\n"
+"POT-Creation-Date: 2025-01-13T15:15:24.364Z\n"
+"PO-Revision-Date: 2025-01-13T15:15:24.364Z\n"
 
 msgid "Never"
 msgstr "Never"
@@ -430,6 +430,9 @@ msgid ""
 msgstr ""
 "Your email is not verified. Please verify your email to continue using the "
 "system."
+
+msgid "Please provide an email and verify it to continue using the system."
+msgstr "Please provide an email and verify it to continue using the system."
 
 msgid "Manage personal access tokens"
 msgstr "Manage personal access tokens"
