fix: use password regex [DHIS2-15704] (#1469)

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-01-29T12:48:34.727Z\n"
-"PO-Revision-Date: 2025-01-29T12:48:34.727Z\n"
+"POT-Creation-Date: 2025-02-05T15:02:02.227Z\n"
+"PO-Revision-Date: 2025-02-05T15:02:02.227Z\n"
 
 msgid "Never"
 msgstr "Never"
@@ -156,11 +156,13 @@ msgid "New password"
 msgstr "New password"
 
 msgid ""
-"Password should be at least 8 characters with at least 1 digit, 1 uppercase "
-"letter and 1 special character"
+"Password should be between {{minPasswordLength}} and {{maxPasswordLength}} "
+"characters long, with at least one lowercase character, one uppercase "
+"character, one number, and one special character."
 msgstr ""
-"Password should be at least 8 characters with at least 1 digit, 1 uppercase "
-"letter and 1 special character"
+"Password should be between {{minPasswordLength}} and {{maxPasswordLength}} "
+"characters long, with at least one lowercase character, one uppercase "
+"character, one number, and one special character."
 
 msgid "Repeat new password"
 msgstr "Repeat new password"
