--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-03-18T18:29:13.632Z\n"
-"PO-Revision-Date: 2025-03-18T18:29:13.632Z\n"
+"POT-Creation-Date: 2025-07-22T12:12:24.931Z\n"
+"PO-Revision-Date: 2025-07-22T12:12:24.931Z\n"
 
 msgid "Never"
 msgstr "Never"
@@ -588,6 +588,12 @@ msgstr ""
 "be spoofed. This setting is intended to discourage unauthorised third-party "
 "developers from connecting to public access instances."
 
+msgid "Token name"
+msgstr "Token name"
+
+msgid "A unique name for this token."
+msgstr "A unique name for this token."
+
 msgid "Choose the context where this token will be used."
 msgstr "Choose the context where this token will be used."
 
@@ -633,6 +639,9 @@ msgstr "Expiration (required)"
 
 msgid "Custom expiration date (required)"
 msgstr "Custom expiration date (required)"
+
+msgid "Token name already exists"
+msgstr "Token name already exists"
 
 msgid ""
 "Personal access tokens should only be used in a browser context for public "
@@ -684,6 +693,9 @@ msgstr "Copied token to clipboard"
 
 msgid "Newly created token"
 msgstr "Newly created token"
+
+msgid "Token Name"
+msgstr "Token Name"
 
 msgid "Copy to clipboard"
 msgstr "Copy to clipboard"
@@ -824,3 +836,11 @@ msgstr "PATCH"
 msgctxt "HTTP method"
 msgid "DELETE"
 msgstr "DELETE"
+
+msgctxt "Application title"
+msgid "__MANIFEST_APP_TITLE"
+msgstr "User Profile"
+
+msgctxt "Application description"
+msgid "__MANIFEST_APP_DESCRIPTION"
+msgstr "User Profile App for DHIS2"
